@@ -75,8 +75,8 @@ CREATE TYPE employee_result AS (
     first_name text,
     middle_name text,
     last_name text,
-    startdate date,
-    enddate date,
+    start_date date,
+    end_date date,
     role varchar(20),
     ssn text,
     sales bool,
